--- a/Assets/UI/Visual Trees/DayUI.uxml
+++ b/Assets/UI/Visual Trees/DayUI.uxml
@@ -38,7 +38,7 @@
                             </ui:Button>
                         </ui:VisualElement>
                         <ui:VisualElement name="BuildingContainer" class="building-item" style="flex-grow: 1; right: 0;">
-                            <ui:Button text="Fountain" parse-escape-sequences="true" display-tooltip-when-elided="true" name="FountainButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;">
+                            <ui:Button text="FOUNTAIN" parse-escape-sequences="true" display-tooltip-when-elided="true" name="FountainButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;">
                                 <ui:VisualElement name="LockLayerTwo" class="lock-layer lock-layer-two" />
                             </ui:Button>
                         </ui:VisualElement>
@@ -47,15 +47,15 @@
                 <ui:VisualElement name="WallsButtonsBackground" style="flex-grow: 1; position: absolute; width: 100%; height: 80%; padding-top: 15px; padding-right: 15px; padding-bottom: 15px; padding-left: 15px; flex-direction: row; justify-content: space-between; background-color: rgb(178, 178, 178); display: none;">
                     <ui:VisualElement name="BuildingButtonsContainer" style="flex-grow: 1; flex-direction: row; width: 100%; height: 100%; justify-content: space-between;">
                         <ui:VisualElement name="BuildingContainer" class="building-item" style="flex-grow: 1;">
-                            <ui:Button text="Brick Wall" parse-escape-sequences="true" display-tooltip-when-elided="true" name="BrickWallButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;" />
+                            <ui:Button text="BRICK WALL" parse-escape-sequences="true" display-tooltip-when-elided="true" name="BrickWallButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;" />
                         </ui:VisualElement>
                         <ui:VisualElement name="BuildingContainer" class="building-item" style="flex-grow: 1; left: 35%;">
-                            <ui:Button text="Garden Fence" parse-escape-sequences="true" display-tooltip-when-elided="true" name="GardenFenceButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;">
+                            <ui:Button text="GARDEN FENCE" parse-escape-sequences="true" display-tooltip-when-elided="true" name="GardenFenceButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;">
                                 <ui:VisualElement name="LockLayerOne" class="lock-layer lock-layer-one" />
                             </ui:Button>
                         </ui:VisualElement>
                         <ui:VisualElement name="BuildingContainer" class="building-item" style="flex-grow: 1; right: 0;">
-                            <ui:Button text="Iron Fence" parse-escape-sequences="true" display-tooltip-when-elided="true" name="IronFenceButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;">
+                            <ui:Button text="IRON FENCE" parse-escape-sequences="true" display-tooltip-when-elided="true" name="IronFenceButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;">
                                 <ui:VisualElement name="LockLayerTwo" class="lock-layer lock-layer-two" />
                             </ui:Button>
                         </ui:VisualElement>
