--- a/Assets/UI/Visual Trees/DayUI.uxml
+++ b/Assets/UI/Visual Trees/DayUI.uxml
@@ -6,24 +6,22 @@
         <ui:VisualElement style="flex-grow: 1; height: 19.3%; position: absolute; width: 100%; bottom: 0; align-items: center;">
             <ui:VisualElement style="flex-grow: 1; width: 36.5%;">
                 <ui:VisualElement style="flex-grow: 1; position: absolute; bottom: 0; width: 100%; height: 20%; flex-direction: row;">
-                    <ui:Button text="GRAVES" parse-escape-sequences="true" display-tooltip-when-elided="true" name="GravesClassButton" class="building-class-button" />
+                    <ui:Button text="GRAVES" parse-escape-sequences="true" display-tooltip-when-elided="true" name="GravesClassButton" class="building-class-button" style="background-color: rgb(0, 0, 0);" />
                     <ui:Button text="DECORATIONS" parse-escape-sequences="true" display-tooltip-when-elided="true" name="DecorationsClassButton" class="building-class-button" />
                     <ui:Button text="WALLS" parse-escape-sequences="true" display-tooltip-when-elided="true" name="WallsClassButton" class="building-class-button" />
                 </ui:VisualElement>
-                <ui:VisualElement name="GravesButtonsBackground" style="flex-grow: 1; position: absolute; width: 100%; height: 80%; padding-top: 15px; padding-right: 15px; padding-bottom: 15px; padding-left: 15px; flex-direction: row; justify-content: space-between; display: none; background-color: rgb(178, 178, 178);">
+                <ui:VisualElement name="GravesButtonsBackground" style="flex-grow: 1; position: absolute; width: 100%; height: 80%; padding-top: 15px; padding-right: 15px; padding-bottom: 15px; padding-left: 15px; flex-direction: row; justify-content: space-between; background-color: rgb(178, 178, 178);">
                     <ui:VisualElement name="BuildingButtonsContainer" style="flex-grow: 1; flex-direction: row; width: 100%; height: 100%; justify-content: space-between;">
                         <ui:VisualElement name="BuildingContainer" class="building-item" style="flex-grow: 1;">
                             <ui:Button text="COFFIN" parse-escape-sequences="true" display-tooltip-when-elided="true" name="CoffinButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;" />
                         </ui:VisualElement>
                         <ui:VisualElement name="BuildingContainer" class="building-item" style="flex-grow: 1; left: 35%;">
-                            <ui:Button text="GRAVE" parse-escape-sequences="true" display-tooltip-when-elided="true" name="GraveButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;">
-                                <ui:VisualElement name="LockLayerOne" class="lock-layer lock-layer-one" />
-                            </ui:Button>
+                            <ui:Button text="GRAVE" parse-escape-sequences="true" display-tooltip-when-elided="true" name="GraveButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;" />
+                            <ui:VisualElement name="LockLayerOne" class="lock-layer lock-layer-one" />
                         </ui:VisualElement>
                         <ui:VisualElement name="BuildingContainer" class="building-item" style="flex-grow: 1; right: 0;">
-                            <ui:Button text="TOMB" parse-escape-sequences="true" display-tooltip-when-elided="true" name="TombButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;">
-                                <ui:VisualElement name="LockLayerTwo" class="lock-layer lock-layer-two" />
-                            </ui:Button>
+                            <ui:Button text="TOMB" parse-escape-sequences="true" display-tooltip-when-elided="true" name="TombButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;" />
+                            <ui:VisualElement name="LockLayerTwo" class="lock-layer lock-layer-two" />
                         </ui:VisualElement>
                     </ui:VisualElement>
                 </ui:VisualElement>
@@ -33,14 +31,12 @@
                             <ui:Button text="DECORATION 1" parse-escape-sequences="true" display-tooltip-when-elided="true" name="DecorationOneButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;" />
                         </ui:VisualElement>
                         <ui:VisualElement name="BuildingContainer" class="building-item" style="flex-grow: 1; left: 35%;">
-                            <ui:Button text="DECORATION 2" parse-escape-sequences="true" display-tooltip-when-elided="true" name="DecorationTwoButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;">
-                                <ui:VisualElement name="LockLayerOne" class="lock-layer lock-layer-one" />
-                            </ui:Button>
+                            <ui:Button text="DECORATION 2" parse-escape-sequences="true" display-tooltip-when-elided="true" name="DecorationTwoButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;" />
+                            <ui:VisualElement name="LockLayerOne" class="lock-layer lock-layer-one" />
                         </ui:VisualElement>
                         <ui:VisualElement name="BuildingContainer" class="building-item" style="flex-grow: 1; right: 0;">
-                            <ui:Button text="FOUNTAIN" parse-escape-sequences="true" display-tooltip-when-elided="true" name="FountainButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;">
-                                <ui:VisualElement name="LockLayerTwo" class="lock-layer lock-layer-two" />
-                            </ui:Button>
+                            <ui:Button text="FOUNTAIN" parse-escape-sequences="true" display-tooltip-when-elided="true" name="FountainButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;" />
+                            <ui:VisualElement name="LockLayerTwo" class="lock-layer lock-layer-two" />
                         </ui:VisualElement>
                     </ui:VisualElement>
                 </ui:VisualElement>
@@ -50,14 +46,12 @@
                             <ui:Button text="BRICK WALL" parse-escape-sequences="true" display-tooltip-when-elided="true" name="BrickWallButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;" />
                         </ui:VisualElement>
                         <ui:VisualElement name="BuildingContainer" class="building-item" style="flex-grow: 1; left: 35%;">
-                            <ui:Button text="GARDEN FENCE" parse-escape-sequences="true" display-tooltip-when-elided="true" name="GardenFenceButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;">
-                                <ui:VisualElement name="LockLayerOne" class="lock-layer lock-layer-one" />
-                            </ui:Button>
+                            <ui:Button text="GARDEN FENCE" parse-escape-sequences="true" display-tooltip-when-elided="true" name="GardenFenceButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;" />
+                            <ui:VisualElement name="LockLayerOne" class="lock-layer lock-layer-one" />
                         </ui:VisualElement>
                         <ui:VisualElement name="BuildingContainer" class="building-item" style="flex-grow: 1; right: 0;">
-                            <ui:Button text="IRON FENCE" parse-escape-sequences="true" display-tooltip-when-elided="true" name="IronFenceButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;">
-                                <ui:VisualElement name="LockLayerTwo" class="lock-layer lock-layer-two" />
-                            </ui:Button>
+                            <ui:Button text="IRON FENCE" parse-escape-sequences="true" display-tooltip-when-elided="true" name="IronFenceButton" class="building-button" style="-unity-text-align: lower-center; color: rgb(255, 255, 255); font-size: 18px;" />
+                            <ui:VisualElement name="LockLayerTwo" class="lock-layer lock-layer-two" />
                         </ui:VisualElement>
                     </ui:VisualElement>
                 </ui:VisualElement>
