--- a/Assets/UI/Style Sheets/DayUI.uss
+++ b/Assets/UI/Style Sheets/DayUI.uss
@@ -1,7 +1,7 @@
 .building-class-button {
     -unity-text-align: middle-center;
     width: 33.3%;
-    background-color: rgb(101, 101, 101);
+    background-color: rgb(125, 49, 0);
     height: 100%;
     font-size: 18px;
     color: rgb(255, 255, 255);
@@ -13,13 +13,21 @@
     padding-right: 0;
     padding-bottom: 0;
     padding-left: 0;
+    border-left-color: rgb(79, 31, 0);
+    border-right-color: rgb(79, 31, 0);
+    border-top-color: rgb(79, 31, 0);
+    border-bottom-color: rgb(79, 31, 0);
+    border-top-width: 2px;
+    border-right-width: 2px;
+    border-bottom-width: 2px;
+    border-left-width: 2px;
 }
 
 .building-item {
     width: 30%;
     height: 100%;
-    background-color: rgb(204, 204, 204);
     position: absolute;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .building-button {
@@ -32,6 +40,45 @@
     padding-right: 0;
     padding-bottom: 0;
     padding-left: 0;
+    align-items: center;
+    justify-content: center;
+    border-top-width: 0;
+    border-right-width: 0;
+    border-bottom-width: 0;
+    border-left-width: 0;
+    background-color: rgb(233, 153, 101);
+}
+
+.building-button:hover {
+    background-color: rgb(161, 91, 46);
+}
+
+.building-class-button:hover {
+    background-color: rgb(79, 31, 0);
+}
+
+.class-background-container {
+    position: absolute;
+    flex-direction: row;
+    width: 100%;
+    height: 80%;
+    padding-top: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;
+    background-color: rgb(217, 122, 62);
+    border-top-width: 2px;
+    border-right-width: 2px;
+    border-bottom-width: 0;
+    border-left-width: 2px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    border-left-color: rgb(182, 103, 52);
+    border-right-color: rgb(182, 103, 52);
+    border-top-color: rgb(182, 103, 52);
+    border-bottom-color: rgb(182, 103, 52);
 }
 
 .lock-layer {
@@ -48,8 +95,6 @@
 }
 
 .clock-image-container {
-    width: 960px;
-    height: 640px;
-    right: -368px;
-    top: -194px;
+    width: 480px;
+    height: 320px;
 }
