--- a/Assets/UI/Visual Trees/DayUI.uxml
+++ b/Assets/UI/Visual Trees/DayUI.uxml
@@ -19,7 +19,8 @@
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 1;" />
-        <ui:VisualElement style="flex-grow: 1; position: absolute; bottom: 0; width: 31%; height: 10%; justify-content: flex-start; align-items: flex-start; flex-direction: column; font-size: 30px;">
+        <ui:VisualElement style="flex-grow: 1; position: absolute; bottom: 0; width: 31%; height: 14%; justify-content: flex-start; align-items: flex-start; flex-direction: column; font-size: 30px;">
+            <ui:Label tabindex="-1" text="MOOUSE TO DRAG" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-right: 10px; color: rgb(255, 255, 255);" />
             <ui:Label tabindex="-1" text="SPACE - PLACE" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-right: 10px; color: rgb(255, 255, 255);" />
             <ui:Label tabindex="-1" text="ESC - CANCEL" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-right: 10px; color: rgb(255, 255, 255);" />
         </ui:VisualElement>
