--- a/Assets/UI/Visual Trees/DayUI.uxml
+++ b/Assets/UI/Visual Trees/DayUI.uxml
@@ -19,11 +19,12 @@
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 1;" />
-        <ui:VisualElement style="flex-grow: 1; position: absolute; bottom: 0; width: 31%; height: 20%; justify-content: flex-start; align-items: flex-start; flex-direction: column; font-size: 30px;">
+        <ui:VisualElement style="flex-grow: 1; position: absolute; bottom: 0; width: 31%; height: 25%; justify-content: flex-start; align-items: flex-start; flex-direction: column; font-size: 30px;">
             <ui:Label tabindex="-1" text="R - ROTATE" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-right: 10px; color: rgb(255, 255, 255);" />
             <ui:Label tabindex="-1" text="SPACE - PLACE" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-right: 10px; color: rgb(255, 255, 255);" />
             <ui:Label tabindex="-1" text="ESC - CANCEL" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-right: 10px; color: rgb(255, 255, 255);" />
             <ui:Label tabindex="-1" text="WASD - MOVE" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-right: 10px; color: rgb(255, 255, 255);" />
+            <ui:Label tabindex="-1" text="LEFT CLICK - SELL" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-right: 10px; color: rgb(255, 255, 255);" />
         </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 1; height: 19.3%; position: absolute; width: 100%; bottom: 0; align-items: center;">
             <ui:VisualElement style="flex-grow: 1; width: 36.5%;">
