--- a/Assets/UI/Visual Trees/DayUI.uxml
+++ b/Assets/UI/Visual Trees/DayUI.uxml
@@ -21,7 +21,7 @@
         <ui:VisualElement style="flex-grow: 1;" />
         <ui:VisualElement style="flex-grow: 1; position: absolute; bottom: 0; width: 31%; height: 25%; justify-content: flex-start; align-items: flex-start; flex-direction: column; font-size: 30px;">
             <ui:Label tabindex="-1" text="R - ROTATE" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-right: 10px; color: rgb(255, 255, 255);" />
-            <ui:Label tabindex="-1" text="SPACE - PLACE" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-right: 10px; color: rgb(255, 255, 255);" />
+            <ui:Label tabindex="-1" text="LEFT CLICK - PLACE BUILDING" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-right: 10px; color: rgb(255, 255, 255);" />
             <ui:Label tabindex="-1" text="ESC - CANCEL" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-right: 10px; color: rgb(255, 255, 255);" />
             <ui:Label tabindex="-1" text="WASD - MOVE" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-right: 10px; color: rgb(255, 255, 255);" />
             <ui:Label tabindex="-1" text="LEFT CLICK - SELL" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-right: 10px; color: rgb(255, 255, 255);" />
